# warehouse

./: .dockerignore  pyproject.toml
.github/workflows/: ci-tests.yml
docker/: Dockerfile
src/: config.py  cors.py  main.py  telemetry.py
src/configuration/: __init__.py  app.py
src/database/: alembic.ini  core.py  logging.py
src/database/alembic/: env.py
src/database/alembic/versions/: 0001_baseline.py
src/middleware/: __init__.py  database.py  request_logging.py
src/misc/: timezone.py
src/routers/: __init__.py
src/routers/v1/: __init__.py
src/routers/v1/common/: common.py  schemas.py
src/routers/v1/warehouse/: actions.py  dal.py  description.py  endpoints.py  enums.py  models.py  schemas.py  summary.py  warehouse.py
src/services/: catalog_client.py  redis.py
tests/: test_warehouse_redis_integration.py
