[project]
name = "gastroroute_warehouse"
version = "0.1.0"
description = "GastroRoute warehouse service"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "starlette>=0.49.1",
    "opentelemetry-api>=1.27.0,<2",
    "opentelemetry-sdk>=1.27.0,<2",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0,<2",
    "orjson>=3.10.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "redis>=7.0.0",
    "granian[asgi]>=0.7.0",
    "pytz>=2024.1",
    "alembic>=1.13.0",
]
[tool.ruff]
target-version = "py312"
line-length = 100

[dependency-groups]
dev = ["ruff>=0.8.0"]
